@@ -1,2 +1,3 @@
 *.gem
 Gemfile.lock
+spec/adapters/statsample/
